# jmlc_project

./: .dockerignore  .env.example  .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  requirements.txt  Свежие модели — 12 кандидатов v1.md
_tools/: CALIBRATION_GUIDE.md  README.md  ROADMAP_v0.8.md  backtest_analyses.py  batch_run.py  calc_rf_cai.py  calc_rf_epu.py  conformal_prediction.py  conformal_split.py  coverage.py  coverage_tiers.py  ds_synthesis.py  eda_osl.py  eval_l0_classifier.py  fetch_macro_state.py  langchain_agent.py  news_today.txt  osl_calibrator.py  osl_chemistry.py  osl_common.py  osl_energy.py  osl_metallurgy.py  osl_models.py  osl_oilgas.py  osl_oiv.py  osl_panel.py  osl_pharma.py  osl_retail.py  osl_walkforward.py  pyproject.toml  run_pipeline.py  segment_impact.py  spillover.py
_tools/agents/: README.md  agent_1_classifier.md  agent_2_context_rag.md  agent_3_backtest_analog.md  agent_4_impact.md  agent_5_summary.md  orchestrator.md  orchestrator.py  rag_template.md
_tools/agents/rag/: __init__.py  embeddings.py  find_analogs.py  index_news.py  init_db.py
_tools/calibration/: drift_log.md  osl_chemistry_calibrated.json  osl_energy_calibrated.json  osl_metallurgy_calibrated.json  osl_metallurgy_multi_param_calibrated.json  osl_metallurgy_multi_period_calibrated.json  osl_oilgas_calibrated.json  osl_oilgas_multi_period_calibrated.json  osl_oiv_calibrated.json  osl_pharma_calibrated.json  osl_retail_calibrated.json
_tools/data/: brent_scenarios.json  industry_coverage.json  l0_eval_results.json  l0_gold_set.json  macro_state.json  segment_impact_table.json  segment_impact_table_v0_8.json  shock_to_industries.json  spillover_matrix.json
_tools/data/panel/: SOURCES.md  SOURCES_chemistry.md  SOURCES_energy.md  SOURCES_oilgas.md  (+6 more)
_tools/notebooks/: eda_osl.ipynb
_tools/scripts/: drift_check.py
_tools/tests/: conftest.py  test_backtest_analyses.py  test_calibration.py  test_chemistry.py  test_conformal.py  test_conformal_split.py  test_coverage.py  test_eda.py  test_energy.py  test_l0_prompt_contract.py  test_l1_l2_l3.py  test_langchain_agent.py  test_oilgas.py  test_osl_models.py  test_osl_smoke.py  test_panel.py  test_rag.py  test_synthesis.py  test_v09.py  test_walkforward.py
(+31 files in other folders)
